# G4Simulation

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DOC.md  DOC.wiki  README.md  Viewer.mac  format_all.sh  vis_CC.mac
cmd/: CMakeLists.txt  custom_simulation.cpp  custom_simulation_hypmed.cpp  gen_sim_matrix.cpp  mpi_custom_simulation.cpp  mpi_gen_sim_matrix.cpp  mpi_gen_sim_matrix_hypmed.cpp  multithread.cpp  simple_simulation.cpp  test_cmd.cpp
include/: Simulation.h
macros/: geometryDebug.mac
scripts/: extract_stats.py  extract_to_txt.py  reco-normal.ipynb  reco-normal.py  reco.ipynb  reco_compare.ipynb  recobash.sh  root_aux.py  sifi_data_process.py  simbash.sh
src/: ActionInitialization.h  DSLinkDef.h  DSinclude.hh  DataStorage.cc  DataStorage.h  DataStructConvert.cc  DataStructConvert.hh  Defaults.cpp  Defaults.h  DetectorConstruction.h  EventAction.cpp  EventAction.h  MaterialManager.cpp  MaterialManager.h  MuraMask.cpp  MuraMask.h  PhysicsList.cpp  PhysicsList.h  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.h  Simulation.cc  Simulation.cpp  Simulation.h  Simulation.hh  Source.cc  Source.hh  Utils.h
src/geometry/: Crystal.cpp  Crystal.h  CrystalLayer.cpp  CrystalLayer.h  DetectorBlock.cpp  DetectorBlock.h  Element.h  Fibre.cpp  Fibre.h  FibreLayer.cpp  FibreLayer.h  FibreLayer_Scatterrer.cpp  FibreLayer_Scatterrer.h  GeometryHelpers.cpp  GeometryHelpers.h  HypMedBlock.cpp  HypMedBlock.h  MuraMask.cpp  MuraMask.h
src/tracking/: SteppingAction.cpp  SteppingAction.h
